--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Professional Registration - Multi-Step Form</title>
+    <title>Technical Consultant - Multi-Step Form</title>
     <style>
       * {
         margin: 0;
@@ -510,12 +510,12 @@
   </head>
   <body>
     <button class="open-modal-btn" onclick="openModal()">
-      Start Professional Registration
+      Technical Consultant Form
     </button>
     <div class="modal-overlay" id="modalOverlay">
       <div class="modal-container">
         <div class="modal-header">
-          <h2 class="modal-title">Professional Registration Form</h2>
+          <h2 class="modal-title">Technical Consultant Form</h2>
           <button class="close-btn" onclick="closeModal()">&times;</button>
           <!-- Modern Progress Bar -->
           <div class="progress-container">
